--- a/metamod/singlep-1.0/src/msvc/singlep_mm.vcxproj
+++ b/metamod/singlep-1.0/src/msvc/singlep_mm.vcxproj
@@ -137,6 +137,7 @@
       <ImportLibrary>.\release\singlep_mm.lib</ImportLibrary>
       <AdditionalDependencies>odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <LinkTimeCodeGeneration>UseLinkTimeCodeGeneration</LinkTimeCodeGeneration>
+      <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
