-reverse server_static_s -cleanup netchan code and move hooks to own class

--- a/hlsdk/dedicated_client/Dedicated.vcxproj.filters
+++ b/hlsdk/dedicated_client/Dedicated.vcxproj.filters
@@ -138,6 +138,9 @@
     <ClCompile Include="WaterPrediction.cpp">
       <Filter>Source Files\fixes</Filter>
     </ClCompile>
+    <ClCompile Include="netchan.cpp">
+      <Filter>Source Files\fixes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="dedicated.rc">
