--- a/hlsdk/dedicated_client/Dedicated.vcxproj
+++ b/hlsdk/dedicated_client/Dedicated.vcxproj
@@ -333,6 +333,7 @@
     <ClCompile Include="MinHook\hde\hde64.c" />
     <ClCompile Include="MinHook\hook.c" />
     <ClCompile Include="MinHook\trampoline.c" />
+    <ClCompile Include="netchan.cpp" />
     <ClCompile Include="NightfireFileSystem.cpp" />
     <ClCompile Include="nightfire_hooks.cpp" />
     <ClCompile Include="nightfire_pointers.cpp" />
