-fixed regression where meta audio, meta hook, and player model crash fix did not work -fixed crash on loading map -begin work on proper error handling of missing patterns and hooks

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ _clang-format
 *FileListAbsolute.txt
 /hlsdk/dedicated_client/Debug/Bond.exe
 /visual_c++_redistribs
+/hlsdk/dedicated_client/.vs/Dedicated/FileContentIndex
+/hlsdk/dedicated_client/Release
