-fix crash due to missing gamespy pointer in enginefuncs_t -metamod now compiles successfully on VS2019 -reverse & update entity_state_t -reverse & update clientdata_t -reverse & update entvars_t

--- a/metamod/metamod-hl1-master/metamod/msvc/metamod.vcxproj
+++ b/metamod/metamod-hl1-master/metamod/msvc/metamod.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{5DFCBF9C-35B5-4617-B380-D73DBD022105}</ProjectGuid>
     <SccProjectName />
     <SccLocalPath />
+    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -21,6 +22,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
+    <PlatformToolset>v100</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
