--- a/hlsdk/dedicated_client/Dedicated.vcxproj
+++ b/hlsdk/dedicated_client/Dedicated.vcxproj
@@ -344,6 +344,7 @@
     <ClCompile Include="pattern_scanner.cpp" />
     <ClCompile Include="PlayerModelCrash.cpp" />
     <ClCompile Include="renderfuncs.cpp" />
+    <ClCompile Include="r_studioint.cpp" />
     <ClCompile Include="sv_user.cpp" />
     <ClCompile Include="sys_ded.cpp" />
     <ClCompile Include="timer.cpp" />
