-reverse member variables and vtables of CBaseEntity, CBaseAnimating, CBaseDelay, CBasePlayerWeapon, CBasePlayerItem -rebuild CPDW90 (except for PrimaryAttack, still TODO) -hook FirePredictedBullets -fix GetBoneCoord incorrect arg names -reverse mstudioseqdesc_t

--- a/hlsdk/dedicated_client/Dedicated.vcxproj
+++ b/hlsdk/dedicated_client/Dedicated.vcxproj
@@ -99,7 +99,7 @@
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <WarningLevel>Level3</WarningLevel>
       <AdditionalIncludeDirectories>..\engine;..\common;..\dedicated;..\cl_dll;..\dlls;..\public;..\dx8sdk;..\pm_shared;bzip2\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;DEDICATED;LAUNCHERONLY;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;DEDICATED;LAUNCHERONLY;CLIENT_WEAPONS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AssemblerListingLocation>.\Release\</AssemblerListingLocation>
       <PrecompiledHeaderOutputFile>.\Release\Dedicated.pch</PrecompiledHeaderOutputFile>
       <ObjectFileName>.\Release\</ObjectFileName>
@@ -168,7 +168,7 @@
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <WarningLevel>Level3</WarningLevel>
       <AdditionalIncludeDirectories>..\engine;..\common;..\dedicated;..\cl_dll;..\dlls;..\public;..\dx8sdk;..\pm_shared;bzip2\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;DEDICATED;LAUNCHERONLY;SWDS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;DEDICATED;LAUNCHERONLY;SWDS;CLIENT_WEAPONS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AssemblerListingLocation>.\Release\</AssemblerListingLocation>
       <PrecompiledHeaderOutputFile>.\Release\Dedicated.pch</PrecompiledHeaderOutputFile>
       <ObjectFileName>.\Release\</ObjectFileName>
@@ -232,7 +232,7 @@
       <MinimalRebuild>true</MinimalRebuild>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <AdditionalIncludeDirectories>..\engine;..\common;..\dedicated;..\cl_dll;..\dlls;..\public;..\dx8sdk;..\pm_shared;bzip2\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;DEDICATED;LAUNCHERONLY;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;DEDICATED;LAUNCHERONLY;CLIENT_WEAPONS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AssemblerListingLocation>.\Debug\</AssemblerListingLocation>
       <PrecompiledHeaderOutputFile>.\Debug\Dedicated.pch</PrecompiledHeaderOutputFile>
       <ObjectFileName>.\Debug\</ObjectFileName>
@@ -327,6 +327,7 @@
     <ClCompile Include="engine.cpp" />
     <ClCompile Include="fixes.cpp" />
     <ClCompile Include="FOV.cpp" />
+    <ClCompile Include="gamedll\FirePredictedBullets.cpp" />
     <ClCompile Include="globals.cpp" />
     <ClCompile Include="keyboard.cpp" />
     <ClCompile Include="LighterSpark.cpp" />
