-update engine network protocol version -fix getting kicked when joining multiplayer servers due to laser_beam not being precached on the server -fixed server_t class -fixed SV_EstablishTimeBase using invalid pointer for time

--- a/hlsdk/dedicated_client/Dedicated.vcxproj
+++ b/hlsdk/dedicated_client/Dedicated.vcxproj
@@ -344,6 +344,7 @@
     <ClCompile Include="nightfire_pointers.cpp" />
     <ClCompile Include="pattern_scanner.cpp" />
     <ClCompile Include="PlayerModelCrash.cpp" />
+    <ClCompile Include="protocol_version.cpp" />
     <ClCompile Include="renderfuncs.cpp" />
     <ClCompile Include="r_studioint.cpp" />
     <ClCompile Include="sv_user.cpp" />
